--- a/CmakeLists.txt
+++ b/CmakeLists.txt
@@ -6,7 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 project(Tracer)
 
 
-add_executable(main main.cpp ocl.cpp schedular.cpp viewport.cpp)
+add_executable(main main.cpp ocl.cpp schedular.cpp viewport.cpp world.cpp)
 
 target_include_directories(main PUBLIC "C:\\Users\\yasha\\Documents\\Projects\\stb\\"
                                 PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
